# bot

./: Cargo.toml  Dockerfile  README.md
.sqlx/: query-01db8227fefd374ef588cca4c67d49f056927ad6d6be9ca137bdd95dafaa0436.json  query-040c35b98559b393dec684db77389932332b619c74b52f415a21ee785fdaa1d5.json  query-07d9f5579298d566fcc4568bdac0561c2294fc083e72a40fd452c5959e37926d.json  query-0fbc27e3f6a22cbb3aab19063a0b65d649e9471ccf455abd1ef1b94d7f04d4a7.json  query-108979a90041f269bbac9c1a69cbed67ae271d4ad69caf669e94e796e86bcb4f.json  query-1c81570648d5e84f6fc0fcf0b1cbcda4d0f9061aff78a2888a33258d7f90cb37.json  query-2818009cd30ac87ef9bcef64de022e2688cfc418ba2aa134dd3a82d5fa5b7b7c.json  query-283a4826b65895efeecd307f7e94a72458943fdf89d20920f07873b4946882fe.json  query-29d0548688fff3d6414d9e6ef38e3685ed0d98e69661ec8e9d0c0aa3f48a6cbd.json  query-2aad103bdd9b3694b4a1630a5b696b76966b4234905b6b33bb706d45f57527ba.json  query-2c53665fb4321f3d430edd636b2b11893f143ee7f0b74074461199bf73857887.json  query-301d0d862b8e113d41e3c0b5e3f790e8ab4aacec1d38e0fc8556752bf6c98026.json  query-350d8195bbb5920370d0335747c96005ce2c282096cefda56c122d994651d4a9.json  query-3921715eccdb2844f9de11d234643105fe3104c99112bac3b7c736c0b90ac6c2.json  query-3979e1b7dab942dacf21aed2f428a98d2252fa20cd6111573d3776a21b2b2db3.json  query-425781ee17ac33150a7ff510741c64c8365205ea1c96ba20aa635422cd9f653d.json  query-43e7c89afc8f4227effc5a5b7827d49080689a00816a3c6adcc0965c71ec2648.json  query-47421aa83082315ac142bd91907f98a88dac558730137cd12bb374846a37af24.json  query-4ed2d4d09f73a112d0605b211f0346e93589a4c9de5e281c7ebf75efec0cc82e.json  query-4fe61e4d0aba1b67232c7aaeaa3bdd0f2f710c1113338d93c66b091e73dafc6f.json  query-5240d6ccd59b23875dea3dd40588c799f4f36af639807687fac92ff602c02ef3.json  query-524de313f337482edbc704a598afacd380acfbe2584545cbd3edf75044ad53aa.json  query-54ebc9aa1c9c56a20850a9cb4dea18fb62732aaa5651525a5fa2cb273c65b22a.json  query-57fed462ae9871f11ea1fd8de3fd5fe9416d313e5c5294618dd1f4f7a296a9ef.json  query-58c450aa30e78314bf45f795c45b6050c02903bdaf3e7ff73ac25f75f2acfe99.json  query-5fdb303a0f74a6f8c2c496c8dcb7ced200a8c84685573214506396d674e4b423.json  query-6e664f291fcc1583d822742c81fd116c0d909e50b518b8ccc15980fe3e2ebf53.json  query-757f9b009129cbbb1f2cf30f70377a5dea12f1b78a62240d975771193d74c797.json  query-77cb6e35252a97b45cc9c225ab97a71f15a0fbb7ee966c4e5e2d7d3e0771b174.json  query-81fcf90836294cd69df94c6ce23cf4313ca0690f33daea1b6bee32b8107bf058.json  query-9ba84caa0441097e837362fb5efdb2525c8a151acbe3c1528650573286249ded.json  query-9c34a21d0abea17c39ce12ce770c0c149bff37932644b42ab56216badb429b74.json  query-a4aabb57957258fd0c11e30e3a954a68ebab843fee48faabdc6d40db094dcb4a.json  query-b41ee67507431996a7fc86f20b4a0534834e317e2f4e1953897170e7b3d67b7f.json  query-b6759c784fa2813823c619e318fcaf3b49ae5a353d2cdebf02c855ebf096604f.json  query-be7e0b49fea8b05e7012f49e9a0cbf1cd97d261c7ca03d36bbc11ca476597c3b.json  query-c2652b519cd6845db72368f9ad9f7712468b832d109ffbfa2bcd3149bfc003d4.json  query-c335e65e9eb5de3b0cd2930634bd31f25f973dfeaeff275622e57925fb1daace.json  query-cba147f628e9678470469fac38d0d1dafad40b5e7408392e5a9260bd30ec5d39.json  query-d52b71fce95f1113c723147f6d5acfd505f00819acd90540acb024ea722a2d26.json  (+6 more)
crates/rust.bot_modules.core/: Cargo.toml
crates/rust.bot_modules.core/src/: commands.rs  events.rs  help.rs  lib.rs  modules.rs  ping.rs  settings.rs  stats.rs  tasks.rs  web.rs  whois.rs
crates/rust.bot_modules.lockdown/: Cargo.toml
crates/rust.bot_modules.lockdown/src/: cmds.rs  lib.rs  settings.rs
crates/rust.bot_modules.moderation/: Cargo.toml
crates/rust.bot_modules.moderation/src/: cmd.rs  lib.rs
crates/rust.bot_modules.server_backups/: Cargo.toml
crates/rust.bot_modules.server_backups/src/: cmds.rs  lib.rs
crates/rust.bot_modules.temporary_punishments/: Cargo.toml
crates/rust.bot_modules.temporary_punishments/src/: events.rs  lib.rs
crates/rust.bot_modules_default/: Cargo.toml
crates/rust.bot_modules_default/src/: lib.rs
crates/rust.modules/: Cargo.toml
crates/rust.modules/src/: cache.rs  canonical.rs  helpers.rs  lib.rs  module_config.rs  modules.rs  permission_checks.rs  types.rs  utils.rs
crates/rust.rpc_server.bot/: Cargo.toml
crates/rust.rpc_server.bot/src/: lib.rs  settings_execute.rs  templating_exec.rs  types.rs
src/: binutils.rs  config.rs  main.rs
src/bot/: backups.rs  help.rs  load.rs  lockdowns.rs  mod.rs  moderation.rs  ping.rs  settings.rs  stats.rs  whois.rs
src/botlib/: canonical.rs  durationstring.rs  helpers.rs  mod.rs  numericlistparser.rs  permission_checks.rs  settings.rs  specialchannelallocs.rs
src/cmds/: bot.rs  migrations.rs  mod.rs  poise_register.rs  serenity_test.rs  tester.rs
src/rpc/: mod.rs  settings_execute.rs  templating_exec.rs  types.rs
