[package]
name = "bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
poise = { git = "https://github.com/Anti-Raid/poise", branch = "serenity-next" }
log = "0.4"
env_logger = "0.11"
sqlx = { version = "0.8", features = [ "runtime-tokio-rustls", "postgres", "chrono", "uuid", "json"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "rustls-tls-native-roots"] }
dashmap = { version = "6", features = ["serde", "inline", "rayon"] }
async-trait = "0.1.80"
clap = { version = "4.5.16", features = ["derive"] }
serde_json = "1.0"
indexmap = { version = "2", features = ["serde"] }

# Modules
modules = { path = "./crates/rust.modules" }
bot_modules_default = { path = "./crates/rust.bot_modules_default" }
rust_rpc_server = { path = "../../core/rust/rust.rpc_server" }
rust_rpc_server_bot = { path = "./crates/rust.rpc_server.bot" }
config = { path = "../../core/rust/rust.config" }
silverpelt = { path = "../../core/rust/rust.silverpelt" }

[dependencies.tokio]
version = "1"
features = ["sync", "macros", "rt-multi-thread"]

[dependencies.serenity]
git = "https://github.com/Anti-Raid/serenity"
branch = "next"
features = ["model", "http", "cache", "rustls_backend", "unstable"]

[dependencies.botox]
git = "https://github.com/Anti-Raid/botox"
branch = "main"
