[package]
name = "bot_modules_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
poise = { git = "https://github.com/Anti-Raid/poise", branch = "serenity-next" }
sqlx = { version = "0.8", features = [ "runtime-tokio-rustls", "postgres", "chrono", "uuid", "json"] }
chrono = { version = "0.4", features = ["serde"]}
futures-util = "0.3"
async-trait = "0.1"
serde_json = "1.0"
indexmap = { version = "2", features = ["serde"] }

# Anti-Raid specific
silverpelt = { path = "../../../../core/rust/rust.silverpelt" }
permissions = { path = "../../../../core/rust/rust.permissions" }
permission_checks = { path = "../../../../core/rust/rust.permissions.checks" }
config = { path = "../../../../core/rust/rust.config" }
sandwich_driver = { path = "../../../../core/rust/rust.sandwich_driver" }
rust_buildstats = { path = "../rust.buildstats" }
ar_settings = { path = "../../../../core/rust/rust.settings" }
splashcore_rs = { path = "../../../../core/rust/rust.std" }
templating = { path = "../../../../core/rust/rust.templating" }
gwevent = { path = "../../../../core/rust/rust.gwevent" }
log = "0.4"

[dependencies.serenity]
git = "https://github.com/Anti-Raid/serenity"
branch = "next"
features = ["model", "http", "cache", "rustls_backend", "unstable"]

[dependencies.botox]
git = "https://github.com/Anti-Raid/botox"
branch = "main"

[dependencies.kittycat]
git = "https://github.com/infinitybotlist/kittycat"
branch = "main"

[dependencies.tokio]
version = "1"
features = ["sync", "macros", "rt-multi-thread"]