[package]
name = "bot_modules_lockdown"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
poise = { git = "https://github.com/Anti-Raid/poise", branch = "serenity-next" }
sqlx = { version = "0.8", features = [ "runtime-tokio-rustls", "postgres", "chrono", "uuid", "json"] }
uuid = { version = "1", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"]}
indexmap = { version = "2", features = ["serde"] }
async-trait = "0.1.80"

# Anti-Raid specific
silverpelt = { path = "../../../../core/rust/rust.silverpelt" }
splashcore_rs = { path = "../../../../core/rust/rust.std" }
ar_settings = { path = "../../../../core/rust/rust.settings" }
lockdowns = { path = "../../../../core/rust/rust.lockdowns" }
permission_checks = { path = "../../../../core/rust/rust.permissions.checks" }

[dependencies.serenity]
git = "https://github.com/Anti-Raid/serenity"
branch = "next"
features = ["model", "http", "cache", "rustls_backend", "unstable"]

[dependencies.botox]
git = "https://github.com/Anti-Raid/botox"
branch = "main"

[dependencies.kittycat]
git = "https://github.com/infinitybotlist/kittycat"
branch = "main"

[package.metadata.cargo-machete]
ignored = ["uuid", "chrono"]