[package]
name = "bot_modules_moderation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
poise = { git = "https://github.com/Anti-Raid/poise", branch = "serenity-next" }
log = "0.4"
serde_json = "1.0"
indexmap = { version = "2", features = ["serde"] }
futures-util = "0.3"

# Anti-Raid specific
splashcore_rs = { path = "../../../../core/rust/rust.std" }
silverpelt = { path = "../../../../core/rust/rust.silverpelt" }
permissions = { path = "../../../../core/rust/rust.permissions" }
config = { path = "../../../../core/rust/rust.config" }
sandwich_driver = { path = "../../../../core/rust/rust.sandwich_driver" }
jobserver = { path = "../../../../core/rust/rust.jobserver" }
modules = { path = "../rust.modules" }

[dependencies.serenity]
git = "https://github.com/Anti-Raid/serenity"
branch = "next"
features = ["model", "http", "cache", "rustls_backend", "unstable"]

[dependencies.botox]
git = "https://github.com/Anti-Raid/botox"
branch = "main"
