[package]
name = "bot_modules_temporary_punishments"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
silverpelt = { path = "../../../../core/rust/rust.silverpelt" }
sandwich_driver = { path = "../../../../core/rust/rust.sandwich_driver" }
splashcore_rs = { path = "../../../../core/rust/rust.std" }
async-trait = "0.1.80"
modules = { path = "../rust.modules" }

[dependencies.serenity]
git = "https://github.com/Anti-Raid/serenity"
branch = "next"
features = ["model", "http", "cache", "rustls_backend", "unstable"]

[dependencies.botox]
git = "https://github.com/Anti-Raid/botox"
branch = "main"
