[package]
name = "bot_modules_default"
description = "Default bot modules for Anti Raid"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
silverpelt = { path = "../../../../core/rust/rust.silverpelt" }

# Modules
bot_modules_core = { path = "../rust.bot_modules.core" }
bot_modules_lockdown = { path = "../rust.bot_modules.lockdown" }
bot_modules_moderation = { path = "../rust.bot_modules.moderation" }
bot_modules_server_backups = { path = "../rust.bot_modules.server_backups" }
modules = { path = "../rust.modules" }