[package]
name = "modules"
version = "6.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
poise = { git = "https://github.com/Anti-Raid/poise", branch = "serenity-next" }
serde = "1.0"
serde_json = "1.0"
indexmap = { version = "2", features = ["serde"] }
moka = { version = "0.12", features = ["future", "futures-util"] }
dashmap = { version = "6", features = ["serde", "inline", "rayon"] }
sqlx = { version = "0.8", features = [ "runtime-tokio-rustls", "postgres", "chrono", "uuid", "json"] }
chrono = { version = "0.4", features = ["serde"]}
async-trait = "0.1.80"
log = "0.4"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "rustls-tls-native-roots"] }

# Anti-Raid specific
splashcore_rs = { path = "../../../../core/rust/rust.std" }
silverpelt = { path = "../../../../core/rust/rust.silverpelt" }
permissions = { path = "../../../../core/rust/rust.permissions" }
ar_settings = { path = "../../../../core/rust/rust.settings" }
sandwich_driver = { path = "../../../../core/rust/rust.sandwich_driver" }

[dependencies.serenity]
git = "https://github.com/Anti-Raid/serenity"
branch = "next"
features = ["model", "http", "cache", "rustls_backend", "unstable"]

[dependencies.kittycat]
git = "https://github.com/infinitybotlist/kittycat"
branch = "main"

[dependencies.botox]
git = "https://github.com/Anti-Raid/botox"
branch = "main"
